Completed final lesson, had to check the answers. Had issues with flex-wraping the cards, turns out I had to set a spesific size through the .card selector. Keep that in mind when wraping items.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,70 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display:flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  padding-left:16px;
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display:flex;
+  align-items:center;
+  justify-content:center;
 }
 
-.sidebar {
+.sidebar 
+{
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display:flex;
+  flex-shrink:0;
+}
+a{
+  text-decoration: none;
+  font-size:24px;
+  color:#eee;
 }
 
+ul
+{
+  list-style-type:none;
+  padding-left:10px;
+}
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+.body 
+{
+  display:flex;
+  flex:1;
+}
+
+.container
+{
+  display:flex;
+  flex-wrap:wrap;
+}
+
+.card
+{
+  padding:32px;
+  margin:20px;
+  max-width: 350px;
 }
